# cipher-salad

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml  release.yaml
src/: alphabet.rs  lib.rs  main.rs  vigenere.rs
src/cipher/: atbash.rs  caesar.rs  mod.rs  vigenere.rs
tests/: identity.rs  vigenere.rs
