[package]
name = "cipher-salad"
version = "0.1.0"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2018"
description = "A collection of historical ciphers, served fresh"
repository = "https://github.com/LimeEng/cipher-salad/"
license = "MIT"
keywords = ["cipher", "vigenere"]
categories = ["algorithms", "cryptography"]

exclude = [
    ".github/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
