[package]
name = "cipher-salad"
version = "0.2.0"
edition = "2024"
description = "Implementations of classic ciphers"
repository = "https://github.com/LimeEng/cipher-salad/"
license = "MIT"
keywords = ["cipher", "vigenere", "caesar"]
categories = ["algorithms", "cryptography"]

exclude = [".github/**"]

[dependencies]
unicode-segmentation = "1.12"

[dev-dependencies]
quickcheck = "1.1"
quickcheck_macros = "1.2"
